# phabfive

./: .arcconfig  .arclint  .flake8  .gitignore  .gitleaksignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint.yml  AGENTS.md  CHANGELOG.md  Containerfile.phorge  Dockerfile  Dockerfile.phorge  LICENSE  MANIFEST.in  Makefile  PHORGE_QUICKSTART.md  README.md  compose-phorge.yml  compose.yml  docker-compose-phabricator.yml  docker-compose-phorge.yml  mkdocs.yml  phabfive.yaml.example  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  snapcraft.yaml  test-template-v2.yml  test-template.yaml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: create-templates.md  development.md  edit-cli.md  index.md  maniphest-cli.md  phorge-setup.md  releasing.md  search-templates.md
phabfive/: __init__.py  cli.py  column_transitions.py  constants.py  core.py  diffusion.py  display.py  edit.py  editor.py  exceptions.py  maniphest.py  maniphest_transitions.py  passphrase.py  passphrase_display.py  paste.py  priority_transitions.py  project_filters.py  repl.py  setup.py  status_transitions.py  user.py  yaml_utils.py
phorge/: AUTOMATED_SETUP.md  README-SPACES.md  entrypoint.sh  init-phorge.sh  phabfive  phorge.conf  phorge.ini
test-files/: mega-2024-simulation.yml
tests/: docker-compose.yml  test_arcconfig.py  test_arcrc.py  test_constants.py  test_core.py  test_diffusion.py  test_edit.py  test_enum.py  test_maniphest.py  test_passphrase.py  test_paste.py  test_phabfive.py  test_priority_transitions.py  test_project_filters.py  (+3 more)
(+70 files in other folders)
